--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo-google-fonts/rubik": "^0.2.3",
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^7.0.0",
     "expo": "~52.0.17",
+    "expo-app-loading": "^2.1.1",
     "expo-font": "~13.0.1",
     "expo-linking": "~7.0.3",
     "expo-router": "~4.0.11",
