--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@expo-google-fonts/rubik": "^0.2.3",
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^7.0.0",
+    "@tabler/icons-react-native": "^3.24.0",
     "expo": "~52.0.17",
     "expo-app-loading": "^2.1.1",
     "expo-font": "~13.0.1",
@@ -32,7 +33,8 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
-    "react-native-web": "~0.19.13"
+    "react-native-web": "~0.19.13",
+    "react-native-svg": "15.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
