--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "axios": "^1.7.9",
     "expo": "~52.0.17",
     "expo-app-loading": "^2.1.1",
+    "expo-camera": "^16.0.9",
     "expo-font": "~13.0.1",
     "expo-linking": "~7.0.3",
+    "expo-location": "^18.0.4",
     "expo-router": "~4.0.11",
     "expo-splash-screen": "~0.29.15",
     "expo-status-bar": "~2.0.0",
@@ -32,6 +34,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.3",
+    "react-native-maps": "^1.20.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
